  ".R" (GNU R format), ".m" (Octave format) and ".csv" (comma-
  separated)
- Add new "set" variable, "csv_delim", which sets the delimiter
  used when exporting data as CSV -- valid options are "comma"
  (the default), "space" and "tab"
- Add a new option for CSV export, "--omit-obs": suppresses
  the printing of a first column containing the observations

06/30/2005 version 1.4.1
- Fix horrid unnoticed breakage in bhhh_max (broke both arma 
  and tobit, big mess)	
- Add utf8 validation/conversion for database descriptions 
  (Banco de Espana databases)
- Allow dynamic forecasts with models estimated via corc and 
  similar

06/29/2005 version 1.4.0
- Revise definition of functions in gretl scripts (a backward-
  incompatible change) in the interest of more structured
  programming
- Introduce named lists as a type that can be created and
  manipulated
- Big revamp of forecasting code.  Make forecasts available for
  all types of models; give a choice of static versus dynamic
  forecasting where relevant; make forecast standard errors
  available in more cases
- Increase max length of gretl script command line to 4095 bytes
- Add support for decennial data
- Fix for finding TrueType graph fonts on Windows 2000
- Add new "set" option: "horizon", to configure horizon for impulse
  responses in context of VARs; also add dialog box to set horizon
  for impulse response graphs in GUI
- Disable autocorrelation and ARCH tests in gui model test menu,
  in case of cross-sectional data
- Add Local Whittle Estimator for fractional integration, in context
  of periodogram command
- Add fracdiff function (fractional differencing) to the genr
  command
- sort function in genr: save sorted case markers if the dataset
  has case markers
- Bug fixes for data editing spreadsheet
- Another bug fix for the XLS importer
- In correlogram (acf) output, show calculated 5% critical value
- Correlogram: acf calculations should not use more than 20 percent