@@ -23,6 +23,7 @@
 #include "textutil.h"
 #include "dlgutils.h"
 #include "menustate.h"
+#include "series_view.h"
 
 #ifdef G_OS_WIN32
 #include "gretlwin32.h"
@@ -30,19 +31,35 @@
 #include "clipboard.h"
 #endif
 
-typedef struct {
+typedef struct data_point_t data_point;
+typedef struct multi_point_t multi_point;
+typedef struct series_view_t series_view;
+
+struct data_point_t {
     char label[OBSLEN];
     double val;
-} data_point_t;    
+};
 
-typedef struct {
+struct multi_point_t {
+    int obsnum;
+    double val;
+};  
+
+struct series_view_t {
     int varnum;
     int npoints;
     int digits;
     char format;    
     GtkWidget *digit_spin;
-    data_point_t *points;
-} series_view_t;
+    data_point *points;
+};
+
+struct multi_series_view_t {
+    int *list;
+    int sortvar;
+    int npoints;
+    multi_point *points;
+};
 
 static void series_view_format_dialog (windata_t *vwin, guint a, GtkWidget *w);
 static void series_view_sort (windata_t *vwin, guint a, GtkWidget *w);
@@ -50,6 +67,7 @@ static void series_view_graph (windata_t *vwin, guint a, GtkWidget *w);
 static void scalar_to_clipboard (windata_t *vwin, guint a, GtkWidget *w);
 
 #ifndef OLD_GTK
+
 GtkItemFactoryEntry series_view_items[] = {
     { N_("/_Edit"), NULL, NULL, 0, "<Branch>", GNULL },
     { N_("/Edit/_Copy selection"), NULL, window_copy, GRETL_FORMAT_SELECTION, 
@@ -69,7 +87,9 @@ GtkItemFactoryEntry scalar_view_items[] = {
     { N_("/Edit/_Copy value"), NULL, scalar_to_clipboard, 0, NULL, GNULL },
     { NULL, NULL, NULL, 0, NULL, GNULL }
 };
+
 #else
+
 GtkItemFactoryEntry series_view_items[] = {
     { N_("/_Edit"), NULL, NULL, 0, "<Branch>" },
     { N_("/Edit/_Copy selection"), NULL, window_copy, GRETL_FORMAT_SELECTION, NULL },
@@ -87,18 +107,21 @@ GtkItemFactoryEntry scalar_view_items[] = {
     { N_("/Edit/_Copy value"), NULL, scalar_to_clipboard, 0, NULL },
     { NULL, NULL, NULL, 0, NULL }
 };
-#endif
 
+#endif
 
 GtkItemFactoryEntry *get_series_view_menu_items (int code)
 {
-    if (code == VIEW_SERIES) return series_view_items;
-    else return scalar_view_items;
+    if (code == VIEW_SERIES) {
+	return series_view_items;
+    } else {
+	return scalar_view_items;
+    } 
 }
 
 void free_series_view (gpointer p)
 {
-    series_view_t *sview = (series_view_t *) p;
+    series_view *sview = (series_view *) p;
 
     if (sview == NULL) return;
 
@@ -109,19 +132,27 @@ void free_series_view (gpointer p)
     free(sview);
 }
 
-static int series_view_allocate (series_view_t *sview)
+void free_multi_series_view (gpointer p)
+{
+    multi_series_view *mview = (multi_series_view *) p;
+
+    if (mview == NULL) return;
+
+    if (mview->list != NULL) free(mview->list);
+    if (mview->points != NULL) free(mview->points);
+
+    free(mview);
+}
+
+static int series_view_allocate (series_view *sview)
 {
     if (sview->npoints != 0) {
 	/* already allocated */
 	return 0;
-    }
-
-    else if (!datainfo->vector[sview->varnum]) {
+    } else if (!datainfo->vector[sview->varnum]) {
 	sview->npoints = 1;
 	return 0;
-    }
-
-    else {
+    } else {
 	int t, tp, T = datainfo->t2 - datainfo->t1 + 1;
 	int v = sview->varnum;
 
@@ -130,6 +161,7 @@ static int series_view_allocate (series_view_t *sview)
 	if (sview->points == NULL) {
 	    return 1;
 	} 
+
 	sview->npoints = T;
 
 	/* populate from data set */
@@ -147,14 +179,57 @@ static int series_view_allocate (series_view_t *sview)
     return 0;
 }
 
-static void series_view_print (windata_t *vwin)
+static int multi_series_view_allocate (multi_series_view *mview)
+{
+    if (mview->npoints != 0) {
+	/* already allocated */
+	return 0;
+    } else {
+	int T = datainfo->t2 - datainfo->t1 + 1;
+
+	/* allocate storage */
+	mview->points = mymalloc(T * sizeof *mview->points);
+	if (mview->points == NULL) {
+	    return 1;
+	} 
+	mview->npoints = T;
+    }
+
+    return 0;
+}
+
+static void mview_fill_points (multi_series_view *mview)
+{
+    int t, tp = 0;
+
+    for (t=datainfo->t1; t<=datainfo->t2; t++) {
+	mview->points[tp].obsnum = t;
+	mview->points[tp].val = Z[mview->sortvar][t];
+	tp++;
+    }
+}
+
+static void replace_window_text (windata_t *vwin, const char *pbuf)
 {
 #ifndef OLD_GTK
     GtkTextBuffer *tbuf;
+
+    tbuf = gtk_text_view_get_buffer(GTK_TEXT_VIEW(vwin->w));
+    gtk_text_buffer_set_text(tbuf, pbuf, -1);
+#else
+    gtk_text_freeze(GTK_TEXT(vwin->w));
+    gtk_editable_delete_text(GTK_EDITABLE(vwin->w), 0, -1);
+    gtk_text_insert(GTK_TEXT(vwin->w), fixed_font, 
+		    NULL, NULL, pbuf, strlen(pbuf));
+    gtk_text_thaw(GTK_TEXT(vwin->w));
 #endif
+}
+
+static void series_view_print (windata_t *vwin)
+{
     const char *pbuf;
     PRN *prn;
-    series_view_t *sview = (series_view_t *) vwin->data;
+    series_view *sview = (series_view *) vwin->data;
     int t;
 
     if (bufopen(&prn)) return;
@@ -189,51 +264,126 @@ static void series_view_print (windata_t *vwin)
     }
 
     pbuf = gretl_print_get_buffer(prn);
+    replace_window_text(vwin, pbuf);
 
-    /* clear existing text buffer and insert data */
-#ifndef OLD_GTK
-    tbuf = gtk_text_view_get_buffer(GTK_TEXT_VIEW(vwin->w));
-    gtk_text_buffer_set_text(tbuf, pbuf, -1);
-#else
-    gtk_text_freeze(GTK_TEXT(vwin->w));
-    gtk_editable_delete_text(GTK_EDITABLE(vwin->w), 0, -1);
-    gtk_text_insert(GTK_TEXT(vwin->w), fixed_font, 
-		    NULL, NULL, pbuf, strlen(pbuf));
-    gtk_text_thaw(GTK_TEXT(vwin->w));
-#endif
+    gretl_print_destroy(prn);
+}
+
+static void multi_series_view_print (windata_t *vwin)
+{
+    const char *pbuf;
+    PRN *prn;
+    multi_series_view *mview = (multi_series_view *) vwin->data;
+    int i, vi, t, s;
+    int err = 0;
+
+    if (bufopen(&prn)) return;
+
+    pprintf(prn, "\n%9s", " ");
+    for (i=1; i<=mview->list[0]; i++) {
+	vi = mview->list[i];
+	if (vi >= datainfo->v) {
+	    err = 1;
+	    break;
+	}
+	pprintf(prn, "%12s", datainfo->varname[vi]);
+    }
+
+    if (err) {
+	gretl_print_destroy(prn);
+	return;
+    }
+
+    pputs(prn, "\n\n"); 
+
+    for (t=0; t<mview->npoints; t++) {
+	s = mview->points[t].obsnum;
+	if (s >= datainfo->n) {
+	    err = 1;
+	    break;
+	}
+	print_obs_marker(s, datainfo, prn);
+	for (i=1; i<=mview->list[0]; i++) {
+	    vi = mview->list[i];
+	    pprintf(prn, "%#12.4g", Z[vi][s]);
+	}
+	pputc(prn, '\n');    
+    }
+
+    if (err) {
+	gretl_print_destroy(prn);
+	return;
+    }
+
+    pbuf = gretl_print_get_buffer(prn);
+    replace_window_text(vwin, pbuf);
 
     gretl_print_destroy(prn);
 }
 
 static int compare_points (const void *a, const void *b)
 {
-    const data_point_t *pa = (const data_point_t *) a;
-    const data_point_t *pb = (const data_point_t *) b;
+    const data_point *pa = (const data_point *) a;
+    const data_point *pb = (const data_point *) b;
+     
+    return (pa->val > pb->val) - (pa->val < pb->val);
+}
+
+static int compare_mpoints (const void *a, const void *b)
+{
+    const multi_point *pa = (const multi_point *) a;
+    const multi_point *pb = (const multi_point *) b;
      
     return (pa->val > pb->val) - (pa->val < pb->val);
 }
 
 static void series_view_sort (windata_t *vwin, guint action, GtkWidget *w)
 {
-    int err;
-    series_view_t *sview = (series_view_t *) vwin->data;
+    series_view *sview = (series_view *) vwin->data;
     
-    err = series_view_allocate(sview);
-
-    if (!err) {
-	/* sort the data */
-	qsort((void *) sview->points, (size_t) sview->npoints, 
-	      sizeof sview->points[0], compare_points);
-
-	/* print sorted data to buffer */
-	series_view_print(vwin);
+    if (series_view_allocate(sview)) {
+	return;
     }
+
+    /* sort the data */
+    qsort((void *) sview->points, (size_t) sview->npoints, 
+	  sizeof sview->points[0], compare_points);
+
+    /* print sorted data to buffer */
+    series_view_print(vwin);
+}
+
+void series_view_sort_by (GtkWidget *w, windata_t *vwin)
+{
+    multi_series_view *mview = (multi_series_view *) vwin->data;
+    int v;
+
+    if (mview == NULL || mview->list == NULL) {
+	return;
+    }
+
+    if (multi_series_view_allocate(mview)) {
+	return;
+    }
+
+    v = select_var_from_list(mview->list, _("Variable to sort by"));
+    if (v < 0) {
+	return;
+    }
+
+    mview->sortvar = v;
+    mview_fill_points(mview);
+
+    qsort((void *) mview->points, (size_t) mview->npoints, 
+	  sizeof mview->points[0], compare_mpoints);
+
+    multi_series_view_print(vwin);
 }
 
 static void 
 series_view_graph (windata_t *vwin, guint action, GtkWidget *w)
 {
-    series_view_t *sview = (series_view_t *) vwin->data;
+    series_view *sview = (series_view *) vwin->data;
 
     if (dataset_is_time_series(datainfo)) {
 	do_graph_var(sview->varnum);
@@ -245,7 +395,7 @@ series_view_graph (windata_t *vwin, guint action, GtkWidget *w)
 static void 
 scalar_to_clipboard (windata_t *vwin, guint action, GtkWidget *w)
 {
-    series_view_t *sview = (series_view_t *) vwin->data;
+    series_view *sview = (series_view *) vwin->data;
     double val;
     gchar *buf;
 
@@ -268,7 +418,7 @@ scalar_to_clipboard (windata_t *vwin, guint action, GtkWidget *w)
 
 void series_view_connect (windata_t *vwin, int varnum)
 {
-    series_view_t *sview;
+    series_view *sview;
 
     sview = malloc(sizeof *sview);
 
@@ -285,14 +435,32 @@ void series_view_connect (windata_t *vwin, int varnum)
     }
 }
 
+multi_series_view *multi_series_view_new (int *list)
+{
+    multi_series_view *mview;
+
+    mview = malloc(sizeof *mview);
+
+    if (mview != NULL) {
+	mview->list = list;
+	mview->sortvar = 0;
+	mview->npoints = 0;
+	mview->points = NULL;
+    } else {
+	free(list);
+    }
+
+    return mview;
+}
+
 static 
-void series_view_format_cancel (GtkWidget *w, series_view_t *sview)
+void series_view_format_cancel (GtkWidget *w, series_view *sview)
 {
     sview->digits = -1;
 }
 
 static 
-void series_view_get_figures (GtkWidget *w, series_view_t *sview)
+void series_view_get_figures (GtkWidget *w, series_view *sview)
 {
     sview->digits = gtk_spin_button_get_value_as_int
 	(GTK_SPIN_BUTTON(sview->digit_spin));
@@ -302,14 +470,10 @@ static void
 set_series_float_format (GtkWidget *w, gpointer p)
 {
     gint i;
-    series_view_t *sview = (series_view_t *) p;
+    series_view *sview = (series_view *) p;
 
     if (GTK_TOGGLE_BUTTON(w)->active) {
-#ifndef OLD_GTK
         i = GPOINTER_TO_INT(g_object_get_data(G_OBJECT(w), "action"));
-#else
-        i = GPOINTER_TO_INT(gtk_object_get_data(GTK_OBJECT(w), "action"));
-#endif
         sview->format = i;
     }
 }
@@ -321,19 +485,14 @@ series_view_format_dialog (windata_t *vwin, guint action, GtkWidget *src)
     GtkWidget *vbox, *hbox;
     GtkObject *adj;
     GSList *group;
-    series_view_t *sview = (series_view_t *) vwin->data;
+    series_view *sview = (series_view *) vwin->data;
 
     if (series_view_allocate(sview)) return;
 
     w = gtk_window_new(GTK_WINDOW_TOPLEVEL);
     gtk_window_set_title(GTK_WINDOW(w), _("gretl: data format"));
-#ifndef OLD_GTK
     g_signal_connect(G_OBJECT(w), "destroy",  
 		     G_CALLBACK(gtk_main_quit), NULL);
-#else
-    gtk_signal_connect(GTK_OBJECT(w), "destroy",  
-		     GTK_SIGNAL_FUNC(gtk_main_quit), NULL);
-#endif
 
     vbox = gtk_vbox_new (FALSE, 5);
     gtk_container_set_border_width (GTK_CONTAINER (vbox), 5);
@@ -348,13 +507,8 @@ series_view_format_dialog (windata_t *vwin, guint action, GtkWidget *src)
     tmp = gtk_label_new(_("Show"));
     adj = gtk_adjustment_new(sview->digits, 1, 10, 1, 1, 1);
     sview->digit_spin = gtk_spin_button_new (GTK_ADJUSTMENT(adj), 1, 0);
-#ifndef OLD_GTK
     g_signal_connect (adj, "value_changed",
 		      G_CALLBACK (series_view_get_figures), sview);
-#else
-    gtk_signal_connect (adj, "value_changed",
-			GTK_SIGNAL_FUNC (series_view_get_figures), sview);
-#endif
     gtk_box_pack_start (GTK_BOX (hbox), tmp, FALSE, FALSE, 5);
     gtk_box_pack_start (GTK_BOX (hbox), sview->digit_spin, FALSE, FALSE, 5);
 
@@ -363,34 +517,18 @@ series_view_format_dialog (windata_t *vwin, guint action, GtkWidget *src)
     gtk_box_pack_start (GTK_BOX(vbox), tmp, TRUE, TRUE, 0);
     if (sview->format == 'G')
         gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (tmp), TRUE);
-#ifndef OLD_GTK
     g_signal_connect(G_OBJECT(tmp), "clicked",
                      G_CALLBACK(set_series_float_format), sview);
-    g_object_set_data(G_OBJECT(tmp), "action", 
-                      GINT_TO_POINTER('G'));
-#else
-    gtk_signal_connect(GTK_OBJECT(tmp), "clicked",
-		       GTK_SIGNAL_FUNC(set_series_float_format), sview);
-    gtk_object_set_data(GTK_OBJECT(tmp), "action", 
-			GINT_TO_POINTER('G'));
-#endif
+    g_object_set_data(G_OBJECT(tmp), "action", GINT_TO_POINTER('G'));
 
     group = gtk_radio_button_get_group (GTK_RADIO_BUTTON (tmp));
     tmp = gtk_radio_button_new_with_label(group, _("decimal places"));
     gtk_box_pack_start (GTK_BOX(vbox), tmp, TRUE, TRUE, 0);
     if (sview->format == 'f')
         gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (tmp), TRUE);
-#ifndef OLD_GTK
     g_signal_connect(G_OBJECT(tmp), "clicked",
                      G_CALLBACK(set_series_float_format), sview);
-    g_object_set_data(G_OBJECT(tmp), "action", 
-                      GINT_TO_POINTER('f')); 
-#else
-    gtk_signal_connect(GTK_OBJECT(tmp), "clicked",
-		       GTK_SIGNAL_FUNC(set_series_float_format), sview);
-    gtk_object_set_data(GTK_OBJECT(tmp), "action", 
-			GINT_TO_POINTER('f'));    
-#endif   
+    g_object_set_data(G_OBJECT(tmp), "action", GINT_TO_POINTER('f')); 
 
     /* control buttons */
     hbox = gtk_hbox_new (TRUE, 5);
@@ -431,8 +569,7 @@ series_view_format_dialog (windata_t *vwin, guint action, GtkWidget *src)
     gtk_widget_show_all(w);
 
 #ifdef OLD_GTK
-    gtk_window_set_transient_for(GTK_WINDOW(w),
-				 GTK_WINDOW(vwin->dialog));
+    gtk_window_set_transient_for(GTK_WINDOW(w), GTK_WINDOW(vwin->dialog));
 #endif
 
     gretl_set_window_modal(w);
@@ -441,7 +578,8 @@ series_view_format_dialog (windata_t *vwin, guint action, GtkWidget *src)
 
     if (sview->digits > 0) {
 	series_view_print(vwin);
-    } else { /* canceled */
+    } else { 
+	/* canceled */
 	sview->digits = 6;
     }
 }
