@@ -22,12 +22,19 @@
 
 #include "gretl.h"
 
+typedef struct multi_series_view_t multi_series_view;
+
 void free_series_view (gpointer p);
+
+void free_multi_series_view (gpointer p);
 
 void series_view_connect (windata_t *vwin, int varnum);
 
+multi_series_view *multi_series_view_new (int *list);
+
 GtkItemFactoryEntry *get_series_view_menu_items (int code);
 
+void series_view_sort_by (GtkWidget *w, windata_t *vwin);
 
 #endif
 
