@@ -1,0 +1,57 @@
+/* XPM */
+static char *stock_sort_16[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 35 1",
+"  c black",
+". c #010101",
+"X c #050604",
+"o c #090909",
+"O c #0F0F0E",
+"+ c #11120F",
+"@ c #121411",
+"# c #151513",
+"$ c #1D1E1A",
+"% c #2C2D28",
+"& c #516147",
+"* c #576648",
+"= c #586748",
+"- c #59694A",
+"; c #646F5E",
+": c #647A5D",
+"> c #666E63",
+", c #747C65",
+"< c #78996F",
+"1 c #82867D",
+"2 c #95B390",
+"3 c #9AB593",
+"4 c #9CB796",
+"5 c #9EB49A",
+"6 c #9EB898",
+"7 c #9EB899",
+"8 c #9FB999",
+"9 c #A0BA9A",
+"0 c #A0BA9B",
+"q c #A3BDA0",
+"w c #C5D0C3",
+"e c #CDD8C8",
+"r c #EDEEE8",
+"t c #F0F1F0",
+"y c None",
+/* pixels */
+"yyyyyyyyyyy   yy",
+"yy  O% yyy  y  y",
+"yy te, yyy     y",
+"yy r6= yyy  y  y",
+"yy r0= yyy  y  y",
+"yy r0= yyyyyyyyy",
+"yy r6= yyyyy yyy",
+"yy r6* yyyyyyyyy",
+"yy r4* yyyyy yyy",
+"yy r3= yyyyyyyyy",
+"y or2-X yyyyyyyy",
+"y#1wq<&+yy     y",
+"yy#>5: yyyyy   y",
+"yyy$; yyyyy   yy",
+"yyyy yyyyy   yyy",
+"yyyyyyyyyy     y"
+};
